fixed resources/images corrpuption CommandMeta annotation for ICommand org.Reflections for class scanning