@@ -1,20 +1,23 @@
 package com.lcv.commands;
 
 import net.dv8tion.jda.api.events.interaction.command.SlashCommandInteractionEvent;
-import net.dv8tion.jda.api.interactions.IntegrationType;
 import net.dv8tion.jda.api.interactions.InteractionContextType;
 import net.dv8tion.jda.api.interactions.commands.build.SlashCommandData;
-import net.dv8tion.jda.internal.utils.Helpers;
 
-import java.util.Collections;
 import java.util.Set;
 
 public interface ICommand
 {
-    String getName();
-    String getDescription();
+    default String getName()
+    {
+        return this.getClass().getAnnotation(CommandMeta.class).name();
+    }
+    default String getDescription()
+    {
+        return this.getClass().getAnnotation(CommandMeta.class).description();
+    }
     default Set<InteractionContextType> getContexts() {
-        return Collections.singleton(InteractionContextType.GUILD);
+        return Set.of(this.getClass().getAnnotation(CommandMeta.class).contexts());
     }
 
     void execute(SlashCommandInteractionEvent event);
